# soroban-starter-kit

./: .gitignore  ISSUES.md  README.md  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  infra.yml
.kiro/specs/realtime-monitoring-dashboard/: design.md  requirements.md  tasks.md
contracts/escrow/: Cargo.toml
contracts/escrow/src/: admin.rs  errors.rs  lib.rs  storage.rs  test.rs
contracts/escrow/test_snapshots/test/: test_approve_delivery.1.json  (+7 more)
contracts/token/: Cargo.toml
contracts/token/src/: errors.rs  lib.rs  storage.rs  test.rs
docker/: docker-compose.yml
scripts/: deploy.sh  setup.sh
soroban-starter-kit/: README.md
soroban-starter-kit/.github/workflows/: ci.yml
soroban-starter-kit/contracts/escrow/: Cargo.toml
soroban-starter-kit/contracts/escrow/scripts/: deploy.sh  invoke-example.sh
soroban-starter-kit/contracts/escrow/src/: lib.rs  test.rs
soroban-starter-kit/contracts/token/: Cargo.toml  README.md
soroban-starter-kit/examples/react-native/: App.tsx  README.md  package-lock.json  package.json
soroban-starter-kit/src/components/: NotificationHistory.tsx  NotificationPreferences.tsx
src/: App.tsx  main.tsx
src/components/: BIDashboard.tsx  UserAnalyticsDashboard.tsx  index.ts
src/context/: AnalyticsContext.tsx  WalletContext.tsx
src/services/: index.ts
src/services/analytics/: analyticsService.ts  types.ts  userAnalyticsService.ts
src/services/performance/: metricsCollector.ts
src/services/storage/: index.ts
src/services/wallet/: index.ts  types.ts  walletService.ts
(+30 files in other folders)
