[package]
name = "soroban-escrow-template"
version = "0.1.0"
edition = "2021"
authors = ["Soroban Templates Contributors"]
description = "A production-ready Soroban escrow contract template"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21"

[dev-dependencies]
soroban-sdk = { version = "21", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[[bin]]
name = "soroban-escrow-template"
path = "src/bin/main.rs"